[package]
authors = ["Zesen Qian <github@riaqn.org>"]
edition = "2018"
readme = "README.md"
name = "dollhouse"
version = "0.1.0"

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
panic-abort = "*"
onewire = "*"

[dependencies.bit-vec]
version = "*"
default-features = false
features = []

[dependencies.stm32f1xx-hal]
version = "*"
features = ["stm32f103", "rt"]

[dependencies.arrayvec]
version = "*"
default-features = false
features = []

# this lets you use `cargo fix`!
[[bin]]
name = "dollhouse"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimization
opt-level = 2