[package]
authors = ["Zesen Qian <github@riaqn.org>"]
edition = "2018"
readme = "README.md"
name = "dollhouse"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
onewire = "0.3.13"
ssd1306 = "0.2.6"
embedded-hal = "0.2.3"
embedded-graphics = "0.5.2"
cortex-m-semihosting = "0.3.5"

num-traits = { version = "0.2.8", default-features = false }

[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]

[dependencies.arrayvec]
version = "0.5.1"
default-features = false
features = []

# this lets you use `cargo fix`!
[[bin]]
name = "dollhouse"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimization

[features]
default = []
semihosting = []
